// Login scene
"Authorization.login_button" = "Login";
"Authorization.login_placeholder" = "Login";
"Authorization.password" = "Password";
"Authorization.title" = "Authorization";

// TodoList scene
"TodoList.title" = "TodoList";
"TodoList.deadline" = "Deadline";

// Create task scene
"Create_task.create_button" = "Create";
"Create_task.name_placeholder" = "Enter name task";
"Create_task.normal_item" = "Normal";
"Create_task.important_item" = "Important";
"Create_task.priority_label" = "Priority (for important tasks only):";
"Create_task.title" = "Create task";

// Show error
"I_show_error.title" = "Error";
"I_show_error.ok_button" = "Ok";
"Login_presenter.wrong_password" = "Wrong password.";
"Login_presenter.wrong_login" = "Wrong login.";
"Login_presenter.empty_fields" = "Empty fields.";
"Login_presenter.error_auth" = "Error auth.";


