//
//  AccessibilityIdentifier.swift
// TodoList
//

enum AccessibilityIdentifier: String {
	case textFieldLogin
	case textFieldPassword
	case buttonLogin
}
